* Add private helper method getOwnerDoc() and utilize element.ownerDocument to allow CSS queries and DOM dom traversal against iframes. Closes #11475. [jddalton]

* Fix regexp in Selector.split() that caused Firefox 3 to freeze. [#408 state:resolved] [jddalton, kangax, Shawazi, William Warby]

* Ensure Form.Element#(select|focus) return an element. [jddalton]

* Optimize method execution speed by using the static Element methods instead of the DOM element methods. [jddalton]

* Optimize Array#clone by using slice() helper method. [jddalton]

* Add private helper methods mergeList and prependList to replace Array#concat usage. [jddalton, Tobie Langel]

* Optimize Function bind, bindAsEventListener, curry, methodize and wrap to avoid Array#concat and Function#apply when not needed. [#215 state:resolved]  [kangax, Tobie Langel]

* Add private helper method nodeListSlice() to complement slice(). [jddalton]

* Cleanup whitespace in source files. [jddalton]

* Wrap Prototype in a closure to take advantage of private variables and methods. [jddalton]

* Remove browser sniffs in Selector.handlers "mark" and "concat". [jddalton, kangax]

* Remove browser sniffs for Safari's $A() and Opera's Array#concat redeclaration. [jddalton, kangax]

* Remove IE code related to "fixed" positioned elements because IE doesn't support "fixed" elements. [jddalton]

* Remove Object.is(Function|Number|String) from internal use in favor of simple "typeof" operators. [jddalton]

* Overwrite Array.prototype methods assigned by Enumerable with optimized equivalents. [jddalton]

* Optimize by using "_each" instead of "each" where applicable. Closes #9092. [jddalton, sylvainzimmer]

* Preserve inline display style when using Element#show and Element#hide. Closes #3868. [anonymous, Tobie Langel]

* Fix issue where Function#argumentNames returned incorrect results in IE when comments were intermixed with argument names. [#397 state:resolved] [Christophe Porteneuve, T.J. Crowder]
